fix(ui): Align buttons side by side with sm spacing

--- a/editor-components/call_to_action/call_to_action15/call_to_action15.module.scss
+++ b/editor-components/call_to_action/call_to_action15/call_to_action15.module.scss
@@ -24,9 +24,11 @@
     }
     .button-container{
         display: flex;
+        flex-direction: row;
         flex-wrap: wrap;
         gap: var(--composer-gap-sm);
         justify-content: center;
+        align-items: center;
         .button{
             .button-text{
                 content: "";
